# deep-learning

./: .gitignore  CLAUDE.md  COLAB_SETUP.md  HIERARCHICAL_EXPERIMENT.md  HIERARCHICAL_INTEGRATION.md  IMPLEMENTATION.md  OUTLINE.md  PROJECT_ANALYSIS.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  RESEARCH.md  TINKER_INTEGRATION.md  pyproject.toml  requirements.txt  test_integration.py  test_setup.py
.claude/: settings.local.json
blog/: index.html
cleanenv/: pyvenv.cfg
configs/: hierarchical_probe.yaml  linear_probe.yaml
examples/: hierarchical_network_usage.py
experiments/: README.md  baseline_linear_probe.py  hierarchical_probe.py  layer_analysis.py
notebooks/: 01_getting_started.ipynb  baseline_comparison_all_probes.py  colab_architecture_comparison.ipynb  colab_architecture_comparison_mmlu_pro.ipynb  colab_architecture_comparison_mmlu_pro.ipynb.bak  colab_calibrated_probe.ipynb  colab_layer_analysis.ipynb  colab_multi_source_probe.ipynb  hierarchical_analysis.ipynb  test_mmlu2_model.py
results_imgs/: cdn.discordapp.com: 10.webloc  cdn.discordapp.com: 11.webloc  cdn.discordapp.com: 12.webloc  cdn.discordapp.com: 2.webloc  cdn.discordapp.com: 3.webloc  cdn.discordapp.com: 4.webloc  cdn.discordapp.com: 5.webloc  cdn.discordapp.com: 6.webloc  cdn.discordapp.com: 7.webloc  cdn.discordapp.com: 8.webloc  cdn.discordapp.com: 9.webloc  cdn.discordapp.com:.webloc
src/: __init__.py
src/data/: DATA_README.md  __init__.py  base.py  dataset_requirements.txt  dataset_usage_examples.py  gsm8k.py  mmlu.py  mmlu_pro.py  quickstart.py  triviaqa.py
src/evaluation/: __init__.py  calibration.py  metrics.py  selective.py
src/interpretability/: __init__.py
src/models/: __init__.py  extractor.py  loader.py  registry.py
src/probes/: __init__.py  architectures.py  base.py  calibrated_probe.py  hierarchical.py  linear.py  mlp.py
src/tinker/: __init__.py  client.py  weights.py
src/utils/: __init__.py  config.py  logging.py
